CI version error fix